--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^19.2.1",
     "react-router-dom": "6.22.3",
     "lucide-react": "0.344.0",
-    "recharts": "2.10.0"
+    "recharts": "2.12.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
